@@ -90,6 +90,10 @@ allprojects {
     }
   }
 
+  configurations {
+    testCompile.exclude group: 'ch.qos.logback', module: 'logback-classic'
+  }
+
   repositories {
     mavenLocal()
     jcenter()
@@ -164,6 +168,12 @@ task contract(type: Test) {
 
 task pullTestAsset(type: Exec, description: 'Installs Yarn dependencies.') {
   commandLine './bin/pull-latest-release-asset.sh', 'civil-ccd-definition', 'civil-e2e.zip'
+}
+
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
@@ -353,7 +363,7 @@ dependencies {
   testImplementation group: 'io.rest-assured', name: 'rest-assured'
 
   testCompile group: 'org.springframework.statemachine', name: 'spring-statemachine-test', version: versions.springStatemachine
-
+  testCompile 'com.github.hmcts:fortify-client:1.0.1:all'
   //pact contract testing
   contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-junit5_2.12', version: versions.pact
   contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-java8_2.12', version: versions.pact
